--- a/style.css
+++ b/style.css
@@ -61,5 +61,14 @@ input[type="button"]{
     padding: 20px;
     background-color: #FED62B;  
     margin-bottom: 10px; 
+    position: relative;
 }
 
+.close{
+    position: absolute;
+    right: 7px;
+    top: 10px;
+    padding: 8px 12px 8px 12px;
+    background-color: black;
+    color:white;
+}
