--- a/style.css
+++ b/style.css
@@ -64,11 +64,18 @@ input[type="button"]{
     position: relative;
 }
 
-.close{
-    position: absolute;
-    right: 7px;
-    top: 10px;
-    padding: 8px 12px 8px 12px;
-    background-color: black;
-    color:white;
+.todoList li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    word-break: break-all;
+}
+
+.todoList li span{
+  background-color: #000;
+  padding: 0 10px;
+  margin: 0 5px;
+  color: white;
+  font-size: 28px;
+  cursor: pointer;
 }
